# luacells

./: Cargo.toml  README.md  sand.lua
patterns/: gosperglider.gol  rpent.gol  ww_xor.gol
rules/: langton.lua  life.lua  sand.lua  wireworld.lua
src/: main.rs
