[package]
name = "luaca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
ctrlc = "3.2.3"
grid-area = "1.0.1"
mlua = { version = "0.8.3", features = ["luajit", "vendored"]}
rand = "0.8.5"
