[package]
name = "luacells"
version = "0.1.0"
edition = "2021"
description = "Run cellular automata with Lua scripts"
license = "MIT"
repository = "https://github.com/nph278/luacells"
homepage = "https://github.com/nph278/luacells"

[dependencies]
crossterm = "0.25.0"
ctrlc = "3.2.3"
grid-area = "1.0.1"
mlua = { version = "0.8.3", features = ["luajit", "vendored"]}
rand = "0.8.5"

[profile.release]
strip = true
