[package]
name = "luacells"
version = "0.1.4"
edition = "2021"
description = "A Rust text-based cellular automata simulator that uses Lua for rule definitions."
license = "MIT"
repository = "https://github.com/nph278/luacells"
homepage = "https://github.com/nph278/luacells"

[dependencies]
crossterm = "0.25.0"
ctrlc = "3.2.3"
grid-area = "1.0.1"
mlua = { version = "0.8.3", features = ["luajit", "vendored"]}
rand = "0.8.5"

[profile.release]
strip = true
